--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>ACTIVE INFERENCE ON READING by Marlon Barrios Solano</title>
+    <title>TransScriptural Fugue by Marlon Barrios Solano</title>
     
 
     <script type="module" src="sketch.js"></script>
